# superscraper-telegram-bot

./: .env.example  .gitignore  README.md  df_beat.Dockerfile  df_bot.Dockerfile  df_worker.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: BackgroundTask.py  botManager.py  dataManager.py  main.py  outputControll.py  scrapper.py  scrapperManager.py  util.py
src/bot/: main.py
src/bot/controllers/: start_controller.py
src/bot/conversations/: start_coneversation.py
src/celery/: beat.py  worker.py
src/config/: botApi.py  celeryApp.py  database.py  vars.py
src/shared/models/: base.py  product.py  search.py  searchProduct.py  subscription.py  user.py  userSettings.py
src/shared/tasks/: tasks.py
src/shared/tasks/scrapers/: terminalx.py
