[tool.poetry]
name = "telegram-selenium-bot"
version = "0.1.0"
description = ""
authors = ["Refael <refaelbenzvi24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.3.1"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "python src/main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
